# optimization_methods

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/html/: annotated.html  classes.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1conjugate__gradient__base-members.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1conjugate__gradient__base.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1conjugate__gradient__base__coll__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1fletcher__reeves__method-members.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1fletcher__reeves__method.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1fletcher__reeves__method__coll__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1fletcher__reeves__method__inherit__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1hestenes__stiefel__method-members.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1hestenes__stiefel__method.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1hestenes__stiefel__method__coll__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1hestenes__stiefel__method__inherit__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1polak__ribiere__method-members.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1polak__ribiere__method.html  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1polak__ribiere__method__coll__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1polak__ribiere__method__inherit__graph.dot  classom__unconstrained__methods_1_1om__line__methods_1_1brent__method-members.html  classom__unconstrained__methods_1_1om__line__methods_1_1brent__method.html  classom__unconstrained__methods_1_1om__line__methods_1_1fibonacci__method-members.html  classom__unconstrained__methods_1_1om__line__methods_1_1fibonacci__method.html  classom__unconstrained__methods_1_1om__line__methods_1_1golden__section__method-members.html  classom__unconstrained__methods_1_1om__line__methods_1_1golden__section__method.html  classom__unconstrained__methods_1_1om__line__methods_1_1powell__method-members.html  classom__unconstrained__methods_1_1om__line__methods_1_1powell__method.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1broyden__fletcher__goldfarb__shanno__method-members.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1broyden__fletcher__goldfarb__shanno__method.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1broyden__fletcher__goldfarb__shanno__method__coll__graph.dot  classom__unconstrained__methods_1_1om__quasi__newton_1_1broyden__fletcher__goldfarb__shanno__method__inherit__graph.dot  classom__unconstrained__methods_1_1om__quasi__newton_1_1davidon__fletcher__powell__method-members.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1davidon__fletcher__powell__method.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1davidon__fletcher__powell__method__coll__graph.dot  classom__unconstrained__methods_1_1om__quasi__newton_1_1davidon__fletcher__powell__method__inherit__graph.dot  classom__unconstrained__methods_1_1om__quasi__newton_1_1quasi__newton__base-members.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1quasi__newton__base.html  classom__unconstrained__methods_1_1om__quasi__newton_1_1quasi__newton__base__coll__graph.dot  classom__unconstrained__methods_1_1om__steepest__descent_1_1steepest__descent__method-members.html  classom__unconstrained__methods_1_1om__steepest__descent_1_1steepest__descent__method.html  classom__unconstrained__methods_1_1om__zero__order_1_1nelder__mead__method-members.html  classom__unconstrained__methods_1_1om__zero__order_1_1nelder__mead__method.html  (+163 more)
doc/latex/: annotated.tex  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1conjugate__gradient__base.tex  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1conjugate__gradient__base__coll__graph.dot  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1fletcher__reeves__method.tex  classom__unconstrained__methods_1_1om__conjugate__gradient_1_1hestenes__stiefel__method.tex  (+79 more)
unit_tests/: CMakeLists.txt  om_brent_t.cpp  om_broyden_fletcher_goldfarb_shanno_t.cpp  om_davidon_fletcher_powell_t.cpp  om_fibonacci_t.cpp  om_fletcher_reeves_t.cpp  om_golden_section_t.cpp  om_hestenes_stiefel_t.cpp  om_nelder_mead_t.cpp  om_polak_ribiere_t.cpp  om_powell_conjugate_t.cpp  om_powell_t.cpp  om_steepest_descent_t.cpp  om_unconstrained_methods_t.cpp  om_utilities_t.cpp
(+82 files in other folders)
